# google-cloud-run-sidecar-frontend-backend

./: .bumpversion.cfg  .coveragerc  README.md  backend.sh  requirements.txt  service.yaml  setup.cfg  tox.ini
container/: Dockerfile  vm_docker_build.sh
frontend/: default.conf  package.json
frontend/container/: Dockerfile  entrypoint.sh
frontend/src/: App.css  App.test.tsx  App.tsx  global.d.ts
frontend/src/pages/: HomePage.tsx  Page1.tsx  Page2.tsx
src/demo/backend_api/: app.py  deploy_app.py  verify.py
tests/: test_streamlit_test.py
