[aliases]
test = pytest

[metadata]
name = cloud-run-sidecar-frontend-backend
version = 0.0.1
author = iuiu34
author_email = iuiu34
license = COPYRIGHT
description = A library tool to migrate from setup.py to setup.cfg
keywords = setup.py,setuptools
url = http://github
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9


[options]
package_dir =
    = src
install_requires = file: requirements.txt
include_package_data = True
namespace_packages = demo
;scripts = scripts/setuptools.sh

[options.extras_require]
local = file: requirements_local.txt

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    deploy_app=demo.backend_api.deploy_app:main


